--- a/exam1_preparation/task4.ipynb
+++ b/exam1_preparation/task4.ipynb
@@ -125,7 +125,7 @@
     "\n",
     "We cannot deduce the value of $ \\zeta $, so we will take the maximum possible error.\n",
     "\n",
-    "$ R_{3}(x) \\leq M_{3}(x) :=  \\frac{\\displaystyle\\max_{x \\isin [-1, 1]}|f^{(3 + 1)}(x)|}{(3 + 1)!} |\\displaystyle\\prod_{i = 0}^{3}(x - x_i)| $\n",
+    "$ R_{3}(x) \\leq M_{3}(x) :=  \\frac{\\displaystyle\\max_{x \\in [-1, 1]}|f^{(3 + 1)}(x)|}{(3 + 1)!} |\\displaystyle\\prod_{i = 0}^{3}(x - x_i)| $\n",
     "\n",
     "$ M_{3}(x) =  \\frac{\\displaystyle\\max_{x \\isin [-1, 1]}|f^{(4)}(x)|}{24} |\\displaystyle\\prod_{i = 0}^{3}(x - x_i)| $"
    ]
@@ -138,25 +138,25 @@
     "\n",
     "$ f(x) = \\frac{1}{x+2} $\n",
     "\n",
-    "$ f\\rq(x) = \\frac{-1}{(x+2)^2} $\n",
+    "$ f^{(1)}(x) = \\frac{-1}{(x+2)^2} $\n",
     "\n",
-    "$ f\\rq\\rq(x) = \\frac{2}{(x+2)^3} $\n",
+    "$ f^{(2)}(x) = \\frac{2}{(x+2)^3} $\n",
     "\n",
-    "$ f\\rq\\rq\\rq(x) = \\frac{-6}{(x+2)^4} $\n",
+    "$ f^{(3)}(x) = \\frac{-6}{(x+2)^4} $\n",
     "\n",
-    "$ f\\rq\\rq\\rq\\rq(x) = \\frac{24}{(x+2)^5} $"
+    "$ f^{(4)}(x) = \\frac{24}{(x+2)^5} $"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now let's solve $ \\displaystyle\\max_{x \\isin [-1, 1]}|f^{(4)}(x)| $\n",
+    "Now let's solve $ \\displaystyle\\max_{x \\in [-1, 1]}|f^{(4)}(x)| $\n",
     "\n",
-    "$ \\displaystyle\\max_{x \\isin [-1, 1]}|\\frac{24}{(x+2)^5}| = $\n",
-    "$ \\displaystyle\\max_{x \\isin [-1, 1]}[\\frac{24}{(x+2)^5}] = $\n",
-    "$ \\frac{24}{\\displaystyle\\min_{x \\isin [-1, 1]}[(x+2)^5]} = $\n",
-    "$ \\frac{24}{[\\displaystyle\\min_{x \\isin [-1, 1]}(x+2)]^5} = $\n",
+    "$ \\displaystyle\\max_{x \\in [-1, 1]}|\\frac{24}{(x+2)^5}| = $\n",
+    "$ \\displaystyle\\max_{x \\in [-1, 1]}[\\frac{24}{(x+2)^5}] = $\n",
+    "$ \\frac{24}{\\displaystyle\\min_{x \\in [-1, 1]}[(x+2)^5]} = $\n",
+    "$ \\frac{24}{[\\displaystyle\\min_{x \\in [-1, 1]}(x+2)]^5} = $\n",
     "$ \\frac{24}{(-1+2)^5} = $\n",
     "$ \\frac{24}{1^5} = $\n",
     "$ 24 $"
