--- a/exam1_preparation/task4.ipynb
+++ b/exam1_preparation/task4.ipynb
@@ -121,13 +121,13 @@
     "\n",
     "$ R_3(x) = |f(x) - L_3(f; x)| $\n",
     "\n",
-    "$ R_3(x) = |\\frac{f^{(3 + 1)}(\\zeta)}{(3 + 1)!} \\displaystyle\\prod_{i = 0}^{3}(x - x_i)| $, for some $ \\zeta\\isin[-1, 1]  $ \n",
+    "$ R_3(x) = |\\frac{f^{(3 + 1)}(\\zeta)}{(3 + 1)!} \\displaystyle\\prod_{i = 0}^{3}(x - x_i)| $, for some $ \\zeta\\in[-1, 1]  $ \n",
     "\n",
     "We cannot deduce the value of $ \\zeta $, so we will take the maximum possible error.\n",
     "\n",
     "$ R_{3}(x) \\leq M_{3}(x) :=  \\frac{\\displaystyle\\max_{x \\in [-1, 1]}|f^{(3 + 1)}(x)|}{(3 + 1)!} |\\displaystyle\\prod_{i = 0}^{3}(x - x_i)| $\n",
     "\n",
-    "$ M_{3}(x) =  \\frac{\\displaystyle\\max_{x \\isin [-1, 1]}|f^{(4)}(x)|}{24} |\\displaystyle\\prod_{i = 0}^{3}(x - x_i)| $"
+    "$ M_{3}(x) =  \\frac{\\displaystyle\\max_{x \\in [-1, 1]}|f^{(4)}(x)|}{24} |\\displaystyle\\prod_{i = 0}^{3}(x - x_i)| $"
    ]
   },
   {
@@ -166,7 +166,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$ M_{3}(x) =  \\frac{\\displaystyle\\max_{x \\isin [-1, 1]}|f^{(4)}(x)|}{24} |\\displaystyle\\prod_{i = 0}^{3}(x - x_i)| $\n",
+    "$ M_{3}(x) =  \\frac{\\displaystyle\\max_{x \\in [-1, 1]}|f^{(4)}(x)|}{24} |\\displaystyle\\prod_{i = 0}^{3}(x - x_i)| $\n",
     "\n",
     "$ M_{3}(x) =  \\frac{24}{24} |\\displaystyle\\prod_{i = 0}^{3}(x - x_i)| $\n",
     "\n",
