--- a/exam1/year2022_2023/task2.ipynb
+++ b/exam1/year2022_2023/task2.ipynb
@@ -79,7 +79,7 @@
     "        return (divided_difference_generalized(nodes, values, left+1, right) + \n",
     "          -divided_difference_generalized(nodes, values, left, right-1)) / (nodes[right] - nodes[left])\n",
     "\n",
-    "def hermit_poly(nodes, values, x):\n",
+    "def hermite_poly(nodes, values, x):\n",
     "    return sum(divided_difference_generalized(nodes, values, 0, i) *\n",
     "      (math.prod(x - nodes[j] for j in range(0, i))) for i in range(nodes.size))"
    ]
@@ -105,7 +105,7 @@
     "\n",
     "plt.scatter([0.2, 0.3], [f(0.2), f(0.3)])\n",
     "plt.plot(x_axis, f(x_axis), linestyle='dashed')\n",
-    "plt.plot(x_axis, hermit_poly(nodes, values, x_axis))\n",
+    "plt.plot(x_axis, hermite_poly(nodes, values, x_axis))\n",
     "plt.legend(['points', 'f(x) = ln(x^3)', 'Hermite polynomial'])\n",
     "plt.show()"
    ]
@@ -117,7 +117,7 @@
    "outputs": [],
    "source": [
     "def get_relative_error(nodes, values, x):\n",
-    "    return abs(f(x) - hermit_poly(nodes, values, x)) / abs(f(x))"
+    "    return abs(f(x) - hermite_poly(nodes, values, x)) / abs(f(x))"
    ]
   },
   {
