Made fractions look better

--- a/exam1_preparation/task4.ipynb
+++ b/exam1_preparation/task4.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Дадена е функцията $ f(x) = \\frac{1}{2 + x} $. Построен е интерполационен полином на Лагранж $\\ L_3(f; x) $.\n",
+    "Дадена е функцията $ f(x) = \\dfrac{1}{2 + x} $. Построен е интерполационен полином на Лагранж $\\ L_3(f; x) $.\n",
     "\n",
     "Намерете оценка на грещката $\\ R(x) = |f(x) - L_3(f;x)| $ в интервала $ [-1, 1] $, като използвате Теорема за оценка на грешката и построете графиката и.\n",
     "\n",
@@ -121,13 +121,13 @@
     "\n",
     "$ R_3(x) = |f(x) - L_3(f; x)| $\n",
     "\n",
-    "$ R_3(x) = |\\frac{f^{(3 + 1)}(\\zeta)}{(3 + 1)!} \\displaystyle\\prod_{i = 0}^{3}(x - x_i)| $, for some $ \\zeta\\in[-1, 1]  $ \n",
+    "$ R_3(x) = |\\dfrac{f^{(3 + 1)}(\\zeta)}{(3 + 1)!} \\displaystyle\\prod_{i = 0}^{3}(x - x_i)| $, for some $ \\zeta\\in[-1, 1]  $ \n",
     "\n",
     "We cannot deduce the value of $ \\zeta $, so we will take the maximum possible error.\n",
     "\n",
-    "$ R_{3}(x) \\leq M_{3}(x) :=  \\frac{\\displaystyle\\max_{x \\in [-1, 1]}|f^{(3 + 1)}(x)|}{(3 + 1)!} |\\displaystyle\\prod_{i = 0}^{3}(x - x_i)| $\n",
+    "$ R_{3}(x) \\leq M_{3}(x) :=  \\dfrac{\\displaystyle\\max_{x \\in [-1, 1]}|f^{(3 + 1)}(x)|}{(3 + 1)!} |\\displaystyle\\prod_{i = 0}^{3}(x - x_i)| $\n",
     "\n",
-    "$ M_{3}(x) =  \\frac{\\displaystyle\\max_{x \\in [-1, 1]}|f^{(4)}(x)|}{24} |\\displaystyle\\prod_{i = 0}^{3}(x - x_i)| $"
+    "$ M_{3}(x) =  \\dfrac{\\displaystyle\\max_{x \\in [-1, 1]}|f^{(4)}(x)|}{24} |\\displaystyle\\prod_{i = 0}^{3}(x - x_i)| $"
    ]
   },
   {
@@ -136,15 +136,15 @@
    "source": [
     "Let's calculate $ f^{(4)}(x) $\n",
     "\n",
-    "$ f(x) = \\frac{1}{x+2} $\n",
+    "$ f(x) = \\dfrac{1}{x+2} $\n",
     "\n",
-    "$ f^{(1)}(x) = \\frac{-1}{(x+2)^2} $\n",
+    "$ f^{(1)}(x) = \\dfrac{-1}{(x+2)^2} $\n",
     "\n",
-    "$ f^{(2)}(x) = \\frac{2}{(x+2)^3} $\n",
+    "$ f^{(2)}(x) = \\dfrac{2}{(x+2)^3} $\n",
     "\n",
-    "$ f^{(3)}(x) = \\frac{-6}{(x+2)^4} $\n",
+    "$ f^{(3)}(x) = \\dfrac{-6}{(x+2)^4} $\n",
     "\n",
-    "$ f^{(4)}(x) = \\frac{24}{(x+2)^5} $"
+    "$ f^{(4)}(x) = \\dfrac{24}{(x+2)^5} $"
    ]
   },
   {
@@ -153,12 +153,12 @@
    "source": [
     "Now let's solve $ \\displaystyle\\max_{x \\in [-1, 1]}|f^{(4)}(x)| $\n",
     "\n",
-    "$ \\displaystyle\\max_{x \\in [-1, 1]}|\\frac{24}{(x+2)^5}| = $\n",
-    "$ \\displaystyle\\max_{x \\in [-1, 1]}[\\frac{24}{(x+2)^5}] = $\n",
-    "$ \\frac{24}{\\displaystyle\\min_{x \\in [-1, 1]}[(x+2)^5]} = $\n",
-    "$ \\frac{24}{[\\displaystyle\\min_{x \\in [-1, 1]}(x+2)]^5} = $\n",
-    "$ \\frac{24}{(-1+2)^5} = $\n",
-    "$ \\frac{24}{1^5} = $\n",
+    "$ \\displaystyle\\max_{x \\in [-1, 1]}|\\dfrac{24}{(x+2)^5}| = $\n",
+    "$ \\displaystyle\\max_{x \\in [-1, 1]}[\\dfrac{24}{(x+2)^5}] = $\n",
+    "$ \\dfrac{24}{\\displaystyle\\min_{x \\in [-1, 1]}[(x+2)^5]} = $\n",
+    "$ \\dfrac{24}{[\\displaystyle\\min_{x \\in [-1, 1]}(x+2)]^5} = $\n",
+    "$ \\dfrac{24}{(-1+2)^5} = $\n",
+    "$ \\dfrac{24}{1^5} = $\n",
     "$ 24 $"
    ]
   },
@@ -166,9 +166,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$ M_{3}(x) =  \\frac{\\displaystyle\\max_{x \\in [-1, 1]}|f^{(4)}(x)|}{24} |\\displaystyle\\prod_{i = 0}^{3}(x - x_i)| $\n",
+    "$ M_{3}(x) =  \\dfrac{\\displaystyle\\max_{x \\in [-1, 1]}|f^{(4)}(x)|}{24} |\\displaystyle\\prod_{i = 0}^{3}(x - x_i)| $\n",
     "\n",
-    "$ M_{3}(x) =  \\frac{24}{24} |\\displaystyle\\prod_{i = 0}^{3}(x - x_i)| $\n",
+    "$ M_{3}(x) =  \\dfrac{24}{24} |\\displaystyle\\prod_{i = 0}^{3}(x - x_i)| $\n",
     "\n",
     "$ M_{3}(x) =  |\\displaystyle\\prod_{i = 0}^{3}(x - x_i)| $"
    ]
