Renamed Hermit to Hermite

--- a/exam1_preparation/task2.ipynb
+++ b/exam1_preparation/task2.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,12 +37,12 @@
     "import sys\n",
     "sys.path.append('../util')\n",
     "\n",
-    "from hermit_poly import  hermit_poly"
+    "from hermite_poly import  hermite_poly"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
        "4.0*x**3 - 3.0*x**2 + 1.0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +64,7 @@
     "values = np.array([1,0,2,6,21])\n",
     "\n",
     "x_symbol = sp.symbols('x')\n",
-    "sp.simplify(hermit_poly(nodes, values, x_symbol))"
+    "sp.simplify(hermite_poly(nodes, values, x_symbol))"
    ]
   },
   {
