--- a/additional/interpolation_danger.ipynb
+++ b/additional/interpolation_danger.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
    "source": [
     "degree = 7\n",
     "\n",
-    "plt.plot(x_axis, k(x_axis), linestyle='dashed')\n",
+    "plt.plot(x_axis, f(x_axis), linestyle='dashed')\n",
     "plt.plot(x_axis, lagrange_poly(np.linspace(start, end, degree + 1), f, x_axis))\n",
     "plt.legend(['f(x)', f'Lagrange poly of {degree}th degree'])\n",
     "plt.show()"
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
    "source": [
     "degree = 15\n",
     "\n",
-    "plt.plot(x_axis, k(x_axis), linestyle='dashed')\n",
+    "plt.plot(x_axis, f(x_axis), linestyle='dashed')\n",
     "plt.plot(x_axis, lagrange_poly(np.linspace(start, end, degree + 1), f, x_axis))\n",
     "plt.legend(['f(x)', f'Lagrange poly of {degree}th degree'])\n",
     "plt.show()"
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
    "source": [
     "degree = 25\n",
     "\n",
-    "plt.plot(x_axis, k(x_axis), linestyle='dashed')\n",
+    "plt.plot(x_axis, f(x_axis), linestyle='dashed')\n",
     "plt.plot(x_axis, lagrange_poly(np.linspace(start, end, degree + 1), f, x_axis))\n",
     "plt.legend(['f(x)', f'Lagrange poly of {degree}th degree'])\n",
     "plt.show()"
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
    "source": [
     "degree = 38\n",
     "\n",
-    "plt.plot(x_axis, k(x_axis), linestyle='dashed')\n",
+    "plt.plot(x_axis, f(x_axis), linestyle='dashed')\n",
     "plt.plot(x_axis, lagrange_poly(np.linspace(start, end, degree + 1), f, x_axis))\n",
     "plt.legend(['f(x)', f'Lagrange poly of {degree}th degree'])\n",
     "plt.show()"
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
    "source": [
     "degree = 60\n",
     "\n",
-    "plt.plot(x_axis, k(x_axis), linestyle='dashed')\n",
+    "plt.plot(x_axis, f(x_axis), linestyle='dashed')\n",
     "plt.plot(x_axis, lagrange_poly(np.linspace(start, end, degree + 1), f, x_axis))\n",
     "plt.legend(['f(x)', f'Lagrange poly of {degree}th degree'])\n",
     "plt.show()"
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
    "source": [
     "degree = 64\n",
     "\n",
-    "plt.plot(x_axis, k(x_axis), linestyle='dashed')\n",
+    "plt.plot(x_axis, f(x_axis), linestyle='dashed')\n",
     "plt.plot(x_axis, lagrange_poly(np.linspace(start, end, degree + 1), f, x_axis))\n",
     "plt.legend(['f(x)', f'Lagrange poly of {degree}th degree'])\n",
     "plt.show()"
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
    "source": [
     "degree = 106\n",
     "\n",
-    "plt.plot(x_axis, k(x_axis), linestyle='dashed')\n",
+    "plt.plot(x_axis, f(x_axis), linestyle='dashed')\n",
     "plt.plot(x_axis, lagrange_poly(np.linspace(start, end, degree + 1), f, x_axis))\n",
     "plt.legend(['f(x)', f'Lagrange poly of {degree}th degree'])\n",
     "plt.show()"
