Changed ctg to cot

--- a/homework2/taskB8.ipynb
+++ b/homework2/taskB8.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "Find approximately\n",
-    "$ \\int_{-2}^{-1} (1 - \\ctg x)dx $,\n",
+    "$ \\int_{-2}^{-1} (1 - \\cot x)dx $,\n",
     "using the iterative practical method for approximate calculation of integrals and Simposon's rule. \n",
     "\n",
     "The error $ \\epsilon $ must not exceed $ 10^{-5} $."
