--- a/week1/task2.ipynb
+++ b/week1/task2.ipynb
@@ -80,6 +80,13 @@
     "plt.plot(x_axis, p2(x_axis))\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> The second graph looks more inacurrate. That is because $ p_2 $ needs many more aritmethical operations to be performed which leads to more floating point errors."
+   ]
   }
  ],
  "metadata": {
