added system latex style notation

--- a/exam1_preparation/task2.ipynb
+++ b/exam1_preparation/task2.ipynb
@@ -135,15 +135,11 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "A + B + C = 1\n",
-    "$$\n",
-    "\n",
-    "$$\n",
-    "4A = 6 - 3B - 2C\n",
-    "$$\n",
-    "\n",
-    "$$\n",
-    "4A + 2B + C = 5\n",
+    "\\begin{cases}\n",
+    "    A + B + C = 1 \\\\\n",
+    "    4A = 6 - 3B - 2C \\\\\n",
+    "    4A + 2B + C = 5\n",
+    "\\end{cases}\n",
     "$$"
    ]
   },
@@ -188,11 +184,10 @@
     "<div style=\"text-align:center;\">Now we are left with:</div>\n",
     "\n",
     "$$\n",
-    "3B + 2C = 6\n",
-    "$$\n",
-    "\n",
-    "$$\n",
-    "2B + C = 5\n",
+    "\\begin{cases}\n",
+    "    3B + 2C = 6 \\\\\n",
+    "    2B + C = 5\n",
+    "\\end{cases}\n",
     "$$"
    ]
   },
