fixed comparison with epsilon

--- a/week15/task1.ipynb
+++ b/week15/task1.ipynb
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
     "\n",
     "        xn_plus_1 = xn - f(xn)/f_der1(xn)\n",
     "\n",
-    "        if abs(xn_plus_1 - xn) <= epsilon:\n",
+    "        if abs(xn_plus_1 - xn) < epsilon:\n",
     "            return xn_plus_1, iterations\n",
     "\n",
     "        xn = xn_plus_1\n",
