fixed comparison with epsilon

--- a/week15/task1.ipynb
+++ b/week15/task1.ipynb
@@ -176,7 +176,7 @@
     "    iterations = 0\n",
     "    get_mid = lambda left, right: (right - left) / 2 + left\n",
     "\n",
-    "    while (end - start) > epsilon:\n",
+    "    while (end - start) >= epsilon:\n",
     "        iterations += 1\n",
     "        mid = get_mid(start, end)\n",
     "\n",
