--- a/week15/task1.ipynb
+++ b/week15/task1.ipynb
@@ -56,8 +56,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -66,8 +68,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [
     {
      "data": {
@@ -75,7 +79,7 @@
        "[1.09861228866811]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,9 +87,7 @@
    "source": [
     "x = sp.symbols('x')\n",
     "equation = np.e ** x - 3\n",
-    "solution = sp.solve(equation)\n",
-    "\n",
-    "solution"
+    "(solution := sp.solve(equation))"
    ]
   },
   {
@@ -208,7 +210,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
