replaced def function with lambda

--- a/week08/task5.ipynb
+++ b/week08/task5.ipynb
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {
     "metadata": {}
    },
@@ -208,7 +208,7 @@
        "{x: 2/5 - z, y: 4/5}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,8 +226,7 @@
     "    lambda x, y, z: x + 5*y + z - 4,\n",
     "]\n",
     "\n",
-    "def phi(x, y, z):\n",
-    "    return sum(equation(x, y, z) ** 2 for equation in equations)\n",
+    "phi = lambda x, y, z: sum(equation(x, y, z) ** 2 for equation in equations)\n",
     "\n",
     "equations = [\n",
     "    sp.Eq(sp.diff(phi(x, y, z), x), 0),\n",
