made 1 line consistent

--- a/week08/task5.ipynb
+++ b/week08/task5.ipynb
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {
     "metadata": {}
    },
@@ -151,7 +151,7 @@
        "array([0.4, 0.8])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +219,7 @@
     "z = sp.symbols('z')\n",
     "\n",
     "equations = [\n",
-    "    lambda x, y, z: x + y + z - 1,\n",
+    "    lambda x, y, z: x + 1*y + z - 1,\n",
     "    lambda x, y, z: x + 2*y + z - 2,\n",
     "    lambda x, y, z: x + 3*y + z - 3,\n",
     "    lambda x, y, z: x + 4*y + z - 4,\n",
