--- a/week05/task2.ipynb
+++ b/week05/task2.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "|Blood alcohol level|Relative risk of crashing|\n",
+    "|:-:|:-:|\n",
+    "|0|1|\n",
+    "|0.03|1.06|\n",
+    "|0.07|2.09|\n",
+    "|0.15|22.1|\n",
+    "|0.21|99.78|\n",
+    "|0.27|328.602|\n",
+    "\n",
+    "Construct an interpolation polynomial whcih describes the data from the table."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -28,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {
     "metadata": {}
    },
@@ -40,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {
     "metadata": {}
    },
