removed unnecessary import

--- a/week05/task5.ipynb
+++ b/week05/task5.ipynb
@@ -19,15 +19,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 38,
    "metadata": {
     "metadata": {}
    },
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import matplotlib"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
