replaced a def function with a lambda

--- a/week08/task4.ipynb
+++ b/week08/task4.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "metadata": {}
    },
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "metadata": {}
    },
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "metadata": {}
    },
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "metadata": {}
    },
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "metadata": {}
    },
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {
     "metadata": {}
    },
@@ -230,7 +230,7 @@
        "{x: 0, y: 0}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,8 +243,7 @@
     "    lambda x, y: x + 1 - y\n",
     "]\n",
     "\n",
-    "def phi(x, y):\n",
-    "    return sum(equation(x, y) ** 2 for equation in equations)\n",
+    "phi = lambda x, y: sum(equation(x, y) ** 2 for equation in equations)\n",
     "\n",
     "equations = [\n",
     "    sp.Eq(sp.diff(phi(x, y), x), 0),\n",
