--- a/week11/task2.ipynb
+++ b/week11/task2.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "metadata": {}
    },
@@ -29,20 +29,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {
     "metadata": {}
    },
    "outputs": [],
    "source": [
-    "# rectangles\n",
-    "n = int(np.ceil(100 * np.sqrt(10) / (2 * np.sqrt(3))))\n",
+    "import sys\n",
+    "sys.path.append('../util')\n",
     "\n",
-    "# trapezoid\n",
-    "n = int(np.ceil(100 * np.sqrt(10) / (np.sqrt(6))))\n",
-    "\n",
-    "# Simposon\n",
-    "n = int(np.ceil(5 * np.sqrt(2) / np.power(3, 1 / 4)))"
+    "from interpolation_integration import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [],
+   "source": [
+    "f = lambda x: np.sin(x) / np.log(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.804964022751974, 8.936895920541299e-15)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result, error = quad(f, 7, 9)\n",
+    "result, error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rectangles with 1 subinterval:   0.9515614907107687\n",
+      "Rectangles with 100 subinterval: 0.8049771362397555\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Rectangles with 1 subinterval:  ', composite_rectangles_formula(f, left=7, right=9, subintervals=1))\n",
+    "print('Rectangles with 100 subinterval:', composite_rectangles_formula(f, left=7, right=9, subintervals=100))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Trapezoids with 1 subinterval:   0.5251875296832664\n",
+      "Trapezoids with 100 subinterval: 0.8049377958965451\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Trapezoids with 1 subinterval:  ', composite_trapezoids_formula(f, left=7, right=9, subintervals=1))\n",
+    "print('Trapezoids with 100 subinterval:', composite_trapezoids_formula(f, left=7, right=9, subintervals=100))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Simpson with 1 subinterval:   0.8094368370349346\n",
+      "Simpson with 100 subinterval: 0.804964022792019\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Simpson with 1 subinterval:  ', composite_simpson_formula(f, left=7, right=9, subintervals=1))\n",
+    "print('Simpson with 100 subinterval:', composite_simpson_formula(f, left=7, right=9, subintervals=100))"
    ]
   }
  ],
