added info for subintervals count

--- a/week11/task3.ipynb
+++ b/week11/task3.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 59,
    "metadata": {
     "metadata": {}
    },
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 60,
    "metadata": {
     "metadata": {}
    },
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 61,
    "metadata": {
     "metadata": {}
    },
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 62,
    "metadata": {
     "metadata": {}
    },
@@ -66,7 +66,7 @@
        "0.693147180559945"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 63,
    "metadata": {
     "metadata": {}
    },
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 64,
    "metadata": {
     "metadata": {}
    },
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 65,
    "metadata": {
     "metadata": {}
    },
@@ -155,6 +155,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "n: 56\n",
       "Approximation: 0.6931372163314509\n",
       "Error: 9.96422849441903e-6\n"
      ]
@@ -166,6 +167,7 @@
     "approximation = composite_rectangles_formula(f, left=1, right=2, subintervals=n)\n",
     "error = exact_value - approximation\n",
     "\n",
+    "print(\"n:\", n)\n",
     "print(\"Approximation:\", approximation)\n",
     "print(\"Error:\", error)"
    ]
@@ -179,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 66,
    "metadata": {
     "metadata": {}
    },
@@ -188,6 +190,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "n: 80\n",
       "Approximation: 0.6931569459942253\n",
       "Error: -9.76543427999577e-6\n"
      ]
@@ -199,6 +202,7 @@
     "approximation = composite_trapezoids_formula(f, left=1, right=2, subintervals=n)\n",
     "error = exact_value - approximation\n",
     "\n",
+    "print(\"n:\", n)\n",
     "print(\"Approximation:\", approximation)\n",
     "print(\"Error:\", error)"
    ]
@@ -212,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 67,
    "metadata": {
     "metadata": {}
    },
@@ -221,6 +225,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "n: 4\n",
       "Approximation: 0.6931545306545306\n",
       "Error: -7.35009458530111e-6\n"
      ]
@@ -232,6 +237,7 @@
     "approximation = composite_simpson_formula(f, left=1, right=2, subintervals=n)\n",
     "error = exact_value - approximation\n",
     "\n",
+    "print(\"n:\", n)\n",
     "print(\"Approximation:\", approximation)\n",
     "print(\"Error:\", error)"
    ]
