reusing methods from util dir

--- a/week15/task1.ipynb
+++ b/week15/task1.ipynb
@@ -68,7 +68,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append('../util')\n",
+    "\n",
+    "from approximate_root import newton_raphson, bisection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "metadata": {}
    },
@@ -79,7 +93,7 @@
        "[1.09861228866811]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,8 +106,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "start_of_interval = 0\n",
@@ -114,8 +130,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -127,27 +145,11 @@
     }
    ],
    "source": [
-    "def find_root_newton(initial_guess, f, f_der, epsilon):\n",
-    "    x0 = initial_guess\n",
+    "approximated_root, iterations = newton_raphson(start_of_interval, f, f_der1, epsilon=epsilon)\n",
+    "print(f'Approximated root when initial guess is {start_of_interval}:', approximated_root, 'and iterations:', len(iterations))\n",
     "\n",
-    "    xn = x0\n",
-    "    iterations = 0\n",
-    "\n",
-    "    while True:\n",
-    "        iterations += 1\n",
-    "\n",
-    "        xn_plus_1 = xn - f(xn)/f_der1(xn)\n",
-    "\n",
-    "        if abs(xn_plus_1 - xn) < epsilon:\n",
-    "            return xn_plus_1, iterations\n",
-    "\n",
-    "        xn = xn_plus_1\n",
-    "\n",
-    "approximated_root, iterations = find_root_newton(start_of_interval, f, f_der1, epsilon)\n",
-    "print(f'Approximated root when initial guess is {start_of_interval}:', approximated_root, 'and iterations:', iterations)\n",
-    "\n",
-    "approximated_root, iterations = find_root_newton(end_of_interval, f, f_der1, epsilon)\n",
-    "print(f'Approximated root when initial guess is {end_of_interval}:', approximated_root, 'and iterations:', iterations)"
+    "approximated_root, iterations = newton_raphson(end_of_interval, f, f_der1, epsilon=epsilon)\n",
+    "print(f'Approximated root when initial guess is {end_of_interval}:', approximated_root, 'and iterations:', len(iterations))"
    ]
   },
   {
@@ -159,8 +161,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -171,26 +175,8 @@
     }
    ],
    "source": [
-    "def find_root_bisection(start, end, f, epsilon):\n",
-    "    if f(start) * f(end) >= 0:\n",
-    "        return None\n",
-    "\n",
-    "    iterations = 0\n",
-    "    get_mid = lambda left, right: (right - left) / 2 + left\n",
-    "\n",
-    "    while (end - start) >= epsilon:\n",
-    "        iterations += 1\n",
-    "        mid = get_mid(start, end)\n",
-    "\n",
-    "        if f(mid) < 0:\n",
-    "            start = mid\n",
-    "        else:\n",
-    "            end = mid\n",
-    "    \n",
-    "    return get_mid(start, end) , iterations\n",
-    "\n",
-    "approximated_root, iterations = find_root_bisection(start_of_interval, end_of_interval, f, epsilon)\n",
-    "print('Approximated root:', approximated_root, 'and iterations:', iterations)"
+    "approximated_root, iterations = bisection(start_of_interval, end_of_interval, f, epsilon=epsilon)\n",
+    "print('Approximated root:', approximated_root, 'and iterations:', len(iterations))"
    ]
   }
  ],
