simpified an expression

--- a/week11/task3.ipynb
+++ b/week11/task3.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 1,
    "metadata": {
     "metadata": {}
    },
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 2,
    "metadata": {
     "metadata": {}
    },
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 3,
    "metadata": {
     "metadata": {}
    },
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 4,
    "metadata": {
     "metadata": {}
    },
@@ -66,20 +66,18 @@
        "0.693147180559945"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x = sp.symbols('x')\n",
-    "\n",
-    "(exact_value := sp.integrate(f(x), (x, 1, 2)).evalf())"
+    "(exact_value := sp.integrate(f(x := sp.symbols('x')), (x, 1, 2)).evalf())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 5,
    "metadata": {
     "metadata": {}
    },
@@ -111,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 6,
    "metadata": {
     "metadata": {}
    },
@@ -146,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 7,
    "metadata": {
     "metadata": {}
    },
@@ -181,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 8,
    "metadata": {
     "metadata": {}
    },
@@ -216,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 9,
    "metadata": {
     "metadata": {}
    },
