--- a/week02/task1.ipynb
+++ b/week02/task1.ipynb
@@ -105,7 +105,7 @@
     "\n",
     "$ R_n(x) = |f(x) - L_n(f; x)| $\n",
     "\n",
-    "$ R_n(x) = |\\dfrac{f^{(n + 1)}(\\zeta)}{(n + 1)!} \\displaystyle\\prod_{i = 0}^{n}(x - x_i)| $, for some $ \\zeta\\in[0, \\dfrac{\\pi}{2}]  $ \n",
+    "$ R_n(x) = |\\dfrac{f^{(n + 1)}(\\zeta)}{(n + 1)!} \\displaystyle\\prod_{i = 0}^{n}(x - x_i)| $, for some $ \\zeta\\in(0, \\dfrac{\\pi}{2})  $ \n",
     "\n",
     "We cannot deduce the value of $ \\zeta $, so we will take the maximum possible error.\n",
     "\n",
